SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/EBizCharge_Transaction__c.object-meta.xml
<CustomObject>
    <label>EBizCharge Transaction</label>
    <nameField>
        <displayFormat>tran-{000000}</displayFormat>
        <label>Transaction Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBizCharge Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>