SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Account_email__c.field-meta.xml
<CustomField>
    <fullName>Account_email__c</fullName>
    <formula>Account_Id__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_email</label>
    <type>Text</type>
</CustomField>