SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EBizCharge Transactions</relationshipLabel>
    <relationshipName>EBizCharge_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>