SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Acs_Url__c.field-meta.xml
<CustomField>
    <fullName>Acs_Url__c</fullName>
    <label>Acs Url</label>
    <length>50</length>
    <type>Text</type>
</CustomField>