SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/AuthcCode__c.field-meta.xml
<CustomField>
    <fullName>AuthcCode__c</fullName>
    <label>AuthcCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>