SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Avs_Result__c.field-meta.xml
<CustomField>
    <fullName>Avs_Result__c</fullName>
    <label>Avs Result</label>
    <type>TextArea</type>
</CustomField>