SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Avs_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Avs_Result_Code__c</fullName>
    <label>Avs Result Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>