SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Avs_Street__c.field-meta.xml
<CustomField>
    <fullName>Avs_Street__c</fullName>
    <label>Avs Street</label>
    <type>TextArea</type>
</CustomField>