SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Avs_Zip__c.field-meta.xml
<CustomField>
    <fullName>Avs_Zip__c</fullName>
    <label>Avs Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>