SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Batch_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Ref_Number__c</fullName>
    <label>Batch Ref Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>