SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Card_Code_Result__c.field-meta.xml
<CustomField>
    <fullName>Card_Code_Result__c</fullName>
    <label>Card Code Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>