SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Card_Code_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Card_Code_Result_Code__c</fullName>
    <label>Card Code Result Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>