SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Card_Level_Result__c.field-meta.xml
<CustomField>
    <fullName>Card_Level_Result__c</fullName>
    <label>Card Level Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>