SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>