SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Card_Present__c.field-meta.xml
<CustomField>
    <fullName>Card_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Present</label>
    <type>Checkbox</type>
</CustomField>