SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <label>CreatedDateTime</label>
    <type>DateTime</type>
</CustomField>