SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>