SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Detail_Amount__c.field-meta.xml
<CustomField>
    <fullName>Detail_Amount__c</fullName>
    <label>Detail Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>