SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_AllowPartialAuth__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_AllowPartialAuth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizCharge AllowPartialAuth</label>
    <type>Checkbox</type>
</CustomField>