SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_Clerk__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Clerk__c</fullName>
    <label>EbizCharge Clerk</label>
    <length>55</length>
    <type>Text</type>
</CustomField>