SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_Comments__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Comments__c</fullName>
    <label>EbizCharge Comments</label>
    <length>77</length>
    <type>Text</type>
</CustomField>