SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_Converted_AmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Converted_AmountCurrency__c</fullName>
    <label>EbizCharge Converted AmountCurrency</label>
    <length>33</length>
    <type>Text</type>
</CustomField>