SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_CurrencyX__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_CurrencyX__c</fullName>
    <label>EbizCharge CurrencyX</label>
    <length>44</length>
    <type>Text</type>
</CustomField>