SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_Discount__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Discount__c</fullName>
    <label>EbizCharge Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>