SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EBizCharge_Fields_Id__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Fields_Id__c</fullName>
    <label>EBizCharge Fields Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>