SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EBizCharge_Returned_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Returned_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EBizCharge Returned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>