SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_Shipping__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Shipping__c</fullName>
    <label>EbizCharge Shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>