SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EBizCharge_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Subtotal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EBizCharge Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>