SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_Table__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Table__c</fullName>
    <label>EbizCharge Table</label>
    <length>33</length>
    <type>Text</type>
</CustomField>