SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/EbizCharge_Terminal__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Terminal__c</fullName>
    <label>EbizCharge Terminal</label>
    <length>24</length>
    <type>Text</type>
</CustomField>