SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBizCharge Transactions (Email Contact)</relationshipLabel>
    <relationshipName>EBizCharge_Email_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>