SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/External_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Number__c</fullName>
    <label>External Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>