SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/isDuplicate__c.field-meta.xml
<CustomField>
    <fullName>isDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDuplicate</label>
    <type>Checkbox</type>
</CustomField>