SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Last_X_Digit__c.field-meta.xml
<CustomField>
    <fullName>Last_X_Digit__c</fullName>
    <label>Last X Digit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>