SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Non_Tax__c.field-meta.xml
<CustomField>
    <fullName>Non_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Tax</label>
    <type>Checkbox</type>
</CustomField>