SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>