SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Order_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Order_Numbers__c</fullName>
    <label>Order Numbers</label>
    <length>30</length>
    <type>Text</type>
</CustomField>