SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <length>50</length>
    <type>Text</type>
</CustomField>