SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Payment_account_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_account_Name__c</fullName>
    <label>Payment account Name</label>
    <length>88</length>
    <type>Text</type>
</CustomField>