SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/PONum__c.field-meta.xml
<CustomField>
    <fullName>PONum__c</fullName>
    <label>PONum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>