SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Profiler_Reason__c.field-meta.xml
<CustomField>
    <fullName>Profiler_Reason__c</fullName>
    <label>Profiler Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>