SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Profiler_Response__c.field-meta.xml
<CustomField>
    <fullName>Profiler_Response__c</fullName>
    <label>Profiler Response</label>
    <length>50</length>
    <type>Text</type>
</CustomField>