SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Profiler_Score__c.field-meta.xml
<CustomField>
    <fullName>Profiler_Score__c</fullName>
    <label>Profiler Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>