SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Id</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>EBizCharge Transactions</relationshipLabel>
    <relationshipName>EBizCharge_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>