SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Ref_Number__c</fullName>
    <label>Ref Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>