SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <label>Response Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>