SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <label>Response Status Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>