SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>