SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Result_Code__c</fullName>
    <label>Result Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>