SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Ship_From_Zip__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Zip__c</fullName>
    <label>Ship From Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>