SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Transaction__c/fields/Vpas_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Vpas_Result_Code__c</fullName>
    <label>Vpas Result Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>